# dss_exercise

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindSDL2.cmake  FindSDL2_gfx.cmake  FindSDL2_image.cmake  FindSDL2_ttf.cmake
src/: Application.cpp  Application.h  main.cpp
src/input/: State.cpp  State.h
src/mlb/: Game.cpp  Game.h  Stats.cpp  Stats.h
src/render/: Color.h  Context.cpp  Context.h  Font.cpp  Font.h  ImageTexture.cpp  ImageTexture.h  Renderer.cpp  Renderer.h  TextTexture.cpp  TextTexture.h  Texture.cpp  Texture.h  Window.cpp  Window.h
src/rest/: Tasks.cpp  Tasks.h
src/ui/: GameItem.cpp  GameItem.h  ImageItem.cpp  ImageItem.h  Item.cpp  Item.h  Rect.cpp  Rect.h  RectangleItem.cpp  RectangleItem.h  RowLayout.cpp  RowLayout.h  TextItem.cpp  TextItem.h  Vector2.cpp  Vector2.h  ViewController.cpp  ViewController.h
src/utility/: logging.cpp  logging.h  logging_DEFAULT.cpp  logging_WIN32.cpp  string.cpp  string.h
